# 8bit-native

./: .gitignore  CMakeLists.txt  DEMO-MASTER-PLAN.md  FEEDBACK-audio-system.md  FEEDBACK-ui-text-rendering.md  INTERN-FEEDBACK-DEMO-PLAN.md  INTERN-FEEDBACK-PIXEL-FORMAT.md  INTERN-FEEDBACK-SHADER.md  NOTE-FOR-INTERN.md  PATLABOR-PROPOSAL.md  PIXEL-PUNCH-SCOPE.md  POEM-FOR-THE-INTERN.md  README.md  ROADMAP-v1.md  TASK-FEEDBACK-sprite-colors.md  TASK-animation-system.md  TASK-audio-system.md  TASK-collision-system.md  TASK-delta-time.md  TASK-entity-system.md  TASK-fix-shader-batch.md  TASK-input-system.md  TASK-sprite-batching.md  TASK-sprite-colors.md  TASK-sprite-shader.md  TASK-ui-text-rendering.md  love poem.md
docs/: TEXT_RENDERING_DEBUG.md
shaders/: sprite.metal  sprite_batch.metal
src/: main.cpp  main.mm
src/engine/: Animation.hpp  Animator.cpp  Audio.cpp  Audio.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  FrameTimer.cpp  FrameTimer.hpp  Input.cpp  Input.hpp  Renderer.hpp  Renderer.mm  Screenshot.hpp  Screenshot.mm  Shader.hpp  Shader.mm  SpriteBatch.hpp  SpriteBatch.mm  TextRenderer.hpp  TextRenderer.mm  Texture.hpp  Texture.mm
src/game/: Ball.cpp  Ball.hpp  Enemy.cpp  Enemy.hpp  Paddle.cpp  Paddle.hpp  Player.cpp  Player.hpp  PlayerAttack.cpp  PlayerAttack.hpp
tests/: AudioTests.cpp  CMakeLists.txt  CollisionSystemTests.cpp  EntityManagerTests.cpp  FrameTimerTests.cpp  Info.plist  InputTests.cpp  RendererTests.mm  ShaderTests.mm  SpriteBatchTests.mm  TestFramework.hpp  TextureTests.mm
tests/assets/: invalid.txt  invalid_syntax.metal  missing_function.metal  valid_shader.metal
